trying to fix login form position on gh-pages

--- a/app/styles/login-form.scss
+++ b/app/styles/login-form.scss
@@ -10,6 +10,15 @@ form {
   overflow: hidden;
   width: 240px;
   margin-top: 20px;
+}
+
+.login form {
+  border: 1px solid #c6c7cc;
+  border-radius: 5px;
+  font: 14px/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  overflow: hidden;
+  width: 240px;
+  margin-top: 20px;
   margin-right: 20px;
 }
 
