styling complete...for now...

--- a/app/styles/buttons.scss
+++ b/app/styles/buttons.scss
@@ -68,12 +68,9 @@
   border-radius: 5px;
 }
 
-.create-review-button {
-  font-size: 2em;
+.create-review-btn {
+  font-size: 1.5em;
   margin: 10px 0;
-}
+  padding: 5px 30px;
 
-.delete-btn-main,
-.edit-btn {
-  margin: 20px 0 0;
 }
