--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -9,8 +9,6 @@
       <div class="collapse navbar-collapse navHeaderCollapse">
         <ul class="nav navbar-nav navbar-right">
           <li class="active">{{#link-to 'users.current'}}Home{{/link-to}}</li>
-          <li><a href="#">About</a></li>
-
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Social <b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -19,7 +17,7 @@
               <li><a href="#"><i class="fa fa-twitter-square"></i> Twitter</a></li>
             </ul>
           </li>
-          <li><a href="#contact" data-toggle="modal">Contact Us</a></li>
+          <li><a href="#about" data-toggle="modal">About Tipr</a></li>
 
         </ul>
       </div>
@@ -28,14 +26,17 @@
 
 
 
-  <div class="modal fade" id="contact" role="dialog">
+  <div class="modal fade" id="about" role="dialog">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h4>Contact Tipr Support</h4>
+          <h4>We Love Talent!</h4>
         </div>
         <div class="modal-body">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero quasi accusantium maxime facere, iure rerum praesentium omnis ex sit, nihil eum temporibus, iusto ipsam illo. Sed facilis sunt libero, deleniti.
+          <p>You can't drive down a busy road without seeing at least one person steadily singing to their steering wheel, much like you can't surf YouTube without seeing several hilarious videos of people dancing to every type of music. However, some of these talented individuals don't stop there. These brave souls often take to the streets to entertain others with their gifts of song, dance or instrumental prowess! Although these performance artists are rarely showcasing their skills to "get rich", we at Tipr believe talent should be rewarded!</p>
+
+          <p>No longer will you have to feel guilty after watching an artist's performance and be unable to show your gratitude by leaving them a tip because you "don't have any cash." Talent deserves reward!</p>
+
         </div>
         <div class="modal-footer">
           <a href="" class="btn btn-default" data-dismiss="modal">Cancel</a>
