--- a/app/templates/components/users-current.hbs
+++ b/app/templates/components/users-current.hbs
@@ -10,9 +10,9 @@
     <div class="col-md-12">
       <h2 class="welcome-message">Hello {{session.currentUser.username}}, Welcome to Tipr!</h2>
 
-      <div class="col-md-4"><a href="#">Interests</a></div>
+      <!-- <div class="col-md-4"><a href="#">Interests</a></div>
       <div class="col-md-4"><a href="#">Who I've Tipped</a></div>
-      <div class="col-md-4"><a href="#">Edit Profile</a></div>
+      <div class="col-md-4"><a href="#">Edit Profile</a></div> -->
 
     </div>
   </center>
